--- a/lang/es/help/chat/chatting.html
+++ b/lang/es/help/chat/chatting.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Usando el chat</b></p>
+<p align="center"><b>Uso del chat</b></p>
 
 <p>Este módulo contiene algunas características para hacerlo más agradable.</p>
 
