--- a/lang/es/help/choice/mods.html
+++ b/lang/es/help/choice/mods.html
@@ -1,8 +1,8 @@
-<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<b>Consulta</b></p>
-
-<p>La consulta es una actividad muy sencilla, el profesor hace una
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Consultas</B></P>
+<UL>
+<p>La consulta es una actividad muy sencilla, consistente en que el profesor hace una
 pregunta y especifica una serie de respuestas entre las cuales
 deben elegir los alumnos. Puede ser muy útil para realizar
-encuestas rápidas sobre el tema, para permitir que el grupo
-decida sobre varios temas, para efectos de investigación,
+encuestas rápidas sobre un asunto, para permitir que el grupo
+decida sobre varios temas, para conseguir el consentimiento informado para realizar una investigación,
 etc.</p>
