--- a/lang/es/help/dialogue/closedialogue.html
+++ b/lang/es/help/dialogue/closedialogue.html
@@ -1,6 +1,5 @@
 <p align="center"><b>Cerrar charlas</b></p>
-<p>Puede cerrar una charla en cualquier momento. Cerrar una charla detiene la
-misma y la elimina de su lista actual de charlas. Esto quiere decir que las
+<p>Puede cerrar una charla en cualquier momento. Cerrar una charla la detiene y la elimina de su lista actual de charlas. Esto quiere decir que las
 charlas ya cerradas no aparecerán en esta página. </p>
 
 <p>Podrá ver las charlas ya cerradas pero no podrá realizar aportes en ellas.
