--- a/lang/es/help/dialogue/info.html
+++ b/lang/es/help/dialogue/info.html
@@ -17,6 +17,5 @@ está disponible... </p>
 	
 <p>...El módulo borra las charlas que han sido cerradas y todas sus entradas
 después de cierto período de tiempo. La duración de este período es
-establecida cuando sea crea la charla.&nbsp;</p>
+establecida cuando sea crea la charla.</p>
 
-<img valign=absmiddle src="<?=$cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Charlas</b>
