--- a/lang/es/help/dialogue/sendmail.html
+++ b/lang/es/help/dialogue/sendmail.html
@@ -8,5 +8,5 @@ que pueda accederse al diálogo mismo.</p>
 
 <p>Usted necesita enviar este tipo de mensajes electrónicos sólo si piensa que
 la otra persona probablemente no verá su participación porque no
-participa del curso regularmente. La Lista de Participantes puede mostrarle cuándo
+participa en el curso regularmente. La Lista de Participantes puede mostrarle cuándo
 participaron por última vez en el curso las personas.</p>
