--- a/lang/es/help/exercise/nelements.html
+++ b/lang/es/help/exercise/nelements.html
@@ -1,10 +1,10 @@
-<P ALIGN=CENTER><B>N&uacute;mero de Comentarios, Elementos, Grupos, Criterios o T&iacute;tulos</B></P>
+<P ALIGN=CENTER><B>N&uacute;mero de Comentarios, Elementos, Franjas, Criterios o Rúbricas</B></P>
 
-<P>El n&uacute;mero introducido aqu&iacute; determina cuantos &iacute;tems ser&aacute;n usados en las evaluaciones. 
+<P>El n&uacute;mero introducido aqu&iacute; determina cuántos &iacute;tems ser&aacute;n usados en las evaluaciones. 
 	Dependiendo del tipo de estrategia de evaluaci&oacute;n, este n&uacute;mero indica el n&uacute;mero 
-	de comentarios, elementos de evaluaci&oacute;n, grupos, criterios o categor&iacute;as (sets) de 
-	criterios en un t&iacute;tulo. T&iacute;picamente una asignaci&oacute;n contiene entre 5 y 15 elementos 
-	de evaluaci&oacute;n, el n&uacute;mero actual depende del tama&ntilde;o y la complejidad de la tarea. 
+	de comentarios, elementos de evaluaci&oacute;n, franjas, criterios o categor&iacute;as (conjuntos) de 
+	criterios en una rúbrica. T&iacute;picamente una tarea contiene entre 5 y 15 elementos 
+	de evaluaci&oacute;n, dependiendo el n&uacute;mero real del tama&ntilde;o y la complejidad de la tarea. 
 	
 <p>Durante la fase de preparaci&oacute;n del ejercicio este n&uacute;mero puede ser ajustado con seguridad. 
 	Incrementar el n&uacute;mero puede causar la visualizaci&oacute;n de elementos adicionales en blanco 
