--- a/lang/es/help/exercise/usemax.html
+++ b/lang/es/help/exercise/usemax.html
@@ -2,7 +2,7 @@
 
 <p>Esta opción determina cómo debe calcular el ejercicio la calificación final 
 	de los estudiantes. Cuando existen múltiples envíos, el profesor 
-	puede elejir entre usar la mejor calificación o la calificación media 
+	puede elegir entre usar la mejor calificación o la calificación media 
 	del conjunto de envíos del alumno. Esta opción puede ser cambiada en 
 	cualquier momento durante el ejercicio. Cualquier cambio tiene efecto 
 	inmediato en la página de Calificaciones (siempre que existan varios 
