--- a/lang/es/help/chat/mods.html
+++ b/lang/es/help/chat/mods.html
@@ -1,8 +1,8 @@
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/chat/icon.gif" /> <b>Chat</b></p>
 <p>El módulo de chat permite que los participantes discutan
-en tiempo real a través de la Internet. Esta es una
+en tiempo real (sincrónico) a través de Internet. Esta es una
 útil manera de tener una compresión de los otros y del
-tema en debate --usar una sala de chat es bastante diferente a
-utilizar los foros. El módulo de chat contiene varias
+tema en debate -usar una sala de chat es bastante diferente a
+utilizar los foros (diacrónicos)-. El módulo de chat contiene varias
 utilidades para administrar y revisar las conversaciones
 anteriores.</p>
