--- a/lang/es/help/choice/options.html
+++ b/lang/es/help/choice/options.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>Opciones a elegir</B></P>  
+<P ALIGN=CENTER><B>Opciones de consulta</B></P>  
   
 <P>Aquí es donde usted especifica las opciones que los participantes tienen para escoger.  
 <P>Puede rellenar cualquier número de éstas, es decir, puede dejar alguna en blanco si 
