--- a/lang/es/help/dialogue/maildefault.html
+++ b/lang/es/help/dialogue/maildefault.html
@@ -1,7 +1,7 @@
 <p align="center"><b>Definir correo por defecto</b></p>
 
-<p>Define por defecto la opción &quot;Enviar mensaje de correo
-electrónico&quot; cuando se realiza una participación. Si la opción elegida
+<p>Define por defecto la opción &quot;Enviar mensaje por correo
+electrónico&quot; cuando se agrega una entrada. Si la opción elegida
 es &quot;Sí&quot;, entonces se activará la casilla de envío de mensajes
 electrónicos. De otra manera la casilla no quedará activada.</p>
 
