--- a/lang/es/help/dialogue/writing.html
+++ b/lang/es/help/dialogue/writing.html
@@ -4,8 +4,8 @@
 escribir directamente a su audiencia.</P>
 
 <P>Explique sus ideas tan clara y simplemente como pueda, para evitar
-malentedidos. Una cosa que puede hacer es evitar las palabras largas cuando
-puede expresar lo mismo con palabras más cortas.</P>
+malentedidos. Una cosa que puede hacer es evitar las expresiones largas cuando
+puede expresar lo mismo con expresiones más cortas.</P>
 
 <P>En una charla ayuda que sus aportes sean cortos y concisos. Siempre puede
 cerrar un diálogo y abrir otro si desea discutir acerca de otro tema.</P>
