--- a/lang/es/help/exercise/gradinggrade.html
+++ b/lang/es/help/exercise/gradinggrade.html
@@ -1,16 +1,14 @@
-<P ALIGN=CENTER><B>Calificación de Valoraciones</B></P>
+<P ALIGN=CENTER><B>Calificación de Evaluaciones</B></P>
 
-<blockquote> 
-  <p>En la primera mitad de esta página se muestra la Valoración del Alumno de 
-    su propio trabajo. Esta valoración debería ser calificada (sobre un máximo 
-    de 20). Esto representa una valoración del trabajo mostrado en el segundo 
+<p>En la primera mitad de esta página se muestra la evaluación del Alumno de 
+    su propio trabajo. Esta evaluación debería ser calificada (sobre un máximo 
+    de 20). Esto representa una evaluación del trabajo mostrado en el segundo 
     apartado de Enlaces. (El primero de todos es la descripción del propio ejercicio). 
     En &quot;Calificando la calificación&quot; se debería dar una explicaci&oacute;n 
     normalmente con un comentario que realice en el apartado de Comentarios del 
-    Profesor. La calificación debería reflejar la exactitud de la valoraci&oacute;n, 
-    de forma que una valoración que da una baja calificación a un trabajo pobre 
+    Profesor. La calificación debería reflejar la exactitud de la evaluación, 
+    de forma que una evaluación que da una baja calificación a un trabajo pobre 
     debería recibir una Calificación más alta que otra que otorga una baja puntuación 
     a un buen trabajo, por ejemplo.</p>
-  <p>En la segunda mitad de esta página hay un Formulario de Valoración vacío 
-    para su propia valoración del trabajo del alumno.</p>
-</blockquote>
+  <p>En la segunda mitad de esta página hay un Formulario de evaluación vacío 
+    para su propia evaluación del trabajo del alumno.</p>
