--- a/lang/es/help/exercise/moreinfo.html
+++ b/lang/es/help/exercise/moreinfo.html
@@ -1,6 +1,6 @@
 <IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/exercise/icon.gif">&nbsp;<B>Exercise</B>
 
-<P>Un ejercicio es una simple pero poderosa asignaci&oacute;n. En un ejercicio, el profesor
+<P>Un ejercicio es una tarea a la vez simple y potente. En un ejercicio, el profesor
 pide a los estudiantes una tarea pr&aacute;ctica. Esta tarea puede ser escribir un ensayo o
 un informe, preparar una presentaci&oacute;n, configurar una hoja de c&aacute;lculo, etc. Cuando el
 estudiante ha conclu&iacute;do la tarea debe autoevaluar su trabajo antes de envi&aacute;rselo al
@@ -9,8 +9,8 @@ como el trabajo en si. El profesor puede enviar sus impresiones al alumno y form
 preguntas para mejorar el trabajo y reenviarlo o no si es el caso.</p>
 
 <p>Antes de comenzar el ejercicio el profesor configura el ejercicio:
-<ol> <li>Creando un documento Word o un archivo HTML que encabeza el ejercicio
-	e indica a los estudiantes cual es la tarea que deben realizar. Este archivo
+<ol> <li>Creando un documento Word o un archivo HTML que constituye una introducción al ejercicio
+	e indica a los estudiantes cuál es la tarea que deben realizar. Este archivo
 	es cargado en el ejercicio por el profesor.
 	
 <li>A&ntilde;adiendo los elementos textuales y eligiendo las opciones en el formulario de evaluaci&oacute;n.
@@ -19,7 +19,7 @@ preguntas para mejorar el trabajo y reenviarlo o no si es el caso.</p>
 	pueden ser usadas (vea la ayuda en &quot;Estrategia de Calificaci&oacute;n&quot;)
 </ol></p>
 	
-<p>En clases grandes, el profesor puede encontrar de ayuda el crear mas de una versi&oacute;n del
+<p>En clases grandes, el profesor puede encontrar de ayuda el crear más de una versi&oacute;n del
 	ejercicio. Estas versiones a&ntilde;aden un grado de variedad al ejercicio y asegura que
 	los estudiantes realizan diferentes tareas en el mismo. Estas versiones son asignadas
 	a los estudiantes de una forma aleatoria pero equilibrada. Cada estudiante recibe solamente
@@ -35,9 +35,9 @@ preguntas para mejorar el trabajo y reenviarlo o no si es el caso.</p>
 	estudiantes. Ellos pueden, si lo desean, revisar su trabajo y la calificaci&oacute;n antes de enviar 
 	su trabajo, y probablemente ser&aacute;n animados a ello.</p>
 	
-<p>Cuando el estudiante ha enviado su trabajo y su evaluaci&oacute;n &eacute;stos aparecen disponibles para el 
+<p>Una vez que el estudiante ha enviado su trabajo y su evaluaci&oacute;n &eacute;stos aparecen disponibles para el 
 	profesor. Las evaluaciones pueden ser calificadas y existe un recuadro para los comentarios.
-	El profesor puede ademas acceder al trabajo (usando la evaluaci&oacute;n del alumno como punto
+	El profesor puede además acceder al trabajo (usando la evaluaci&oacute;n del alumno como punto
 	de partida) y decidir si pregunta al estudiante para que env&iacute;e una nueva versi&oacute;n mejorada 
 	del trabajo o no.</p>
 	
@@ -48,13 +48,11 @@ preguntas para mejorar el trabajo y reenviarlo o no si es el caso.</p>
 	formulario de evaluaci&oacute;n, y &eacute;ste reeval&uacute;a a la luz del trabajo revisado 
 	por el alumno, que es mejor que la evaluaci&oacute;n desde cero.</p>
 	
-<p>Cuando se cumple el plazo de entrega del ejercicio el profesor mueve este a la fase siguiente. 
-	Esto impide siguientes env&iacute;os por parte de los estudiantes. Las evaluaciones y env&iacute;os 
-	que no hayan sido calificados y evaluados deben ser calificados y evaluados ahora. 
+<p>Cuando se cumple el plazo de entrega del ejercicio los estudiantes pueden continuar enviando trabajos. Sin embargo, estos envíos son calificados como &quot;retrasados&quot;. El profesor puede, si lo desea, calificar el trabajo y proporcionar retroalimentación al estudiante. Las calificaciones del trabajo retrasado se mantienen en segundo plano y <b>no</b> se usan en el cálculo de las calificaciones finales. Si, por la razón que fuere,el profesor desea aceptar un trabajo retrasado como si hubiera sido enviado dentro de plazo, la señal de retraso puede eliminarse en la página de Administración, encontrando el envío y haciendo clic en el enlace apropiado. A partir de ese momento la calificación de ese trabajo se usará en el cálculo de la calificación final.
 	
 <p>Con todos los ev&iacute;os calificados, el ejercicio se mueve a la fase final. Los estudiantes pueden ahora 
 	ver su calificaci&oacute;n final y las calificaciones asignadas a sus env&iacute;os. La calificaci&oacute;n de un 
-	ejercicio de un estudiante es una combinaci&oacute;n equilibrada de la calificaci&oacute;n que hace el profesor de la 
+	ejercicio de un estudiante es una combinaci&oacute;n ponderada de la calificaci&oacute;n que hace el profesor de la 
 	autoevaluaci&oacute;n y de la calificaci&oacute;n que hace el profesor del trabajo. (La calificaci&oacute;n asignada por el 
 	estudiante <b>no</b> se usa.) La calificaci&oacute;n de los env&iacute;os es trabajo del profesor. La 
 	ponderaci&oacute;n usada para las dos calificaciones (el nivel de calificaci&oacute;n y la calificaci&oacute;n actual) 
