--- a/lang/es/help/exercise/specimen.html
+++ b/lang/es/help/exercise/specimen.html
@@ -1,8 +1,8 @@
-<p align="center"><b>Formulario de Calificaciones de Muestra</b></p>
+<p align="center"><b>Formulario de Evaluación de Muestra</b></p>
 
 <p>Esta p&aacute;gina muestra los detalles del formulario usado actualmente para calificar 
-	su asignaci&oacute;n. Ser&aacute; usado por usted y por el profesor para calificar su trabajo.</p>
+	su tarea. Ser&aacute; usado por usted y por el profesor para calificar su trabajo.</p>
 	
-<p>Note que aunque puede cambiar los niveles en este formulario los cambios NO se guardan. 
+<p>Note que aunque puede cambiar las calificaciones en este formulario, los cambios NO se guardan. 
 	Este es solamente un formulario de muestra, pero bastante parecido al formulario que 
-	usar&aacute;n usted y el profesor durante esta asignaci&oacute;n.</p>
+	usar&aacute;n usted y el profesor durante esta tarea.</p>
