--- a/lang/es/help/exercise/takeownership.html
+++ b/lang/es/help/exercise/takeownership.html
@@ -2,7 +2,7 @@
 
 <p>Este enlace permite al profesor tomar posesión del conjunto actual de ejercicios 
 	enviados. Esta operación es necesaria si se ha importado un ejercicio desde una copia 
-	de seguridad (backup) o desde otro curso. Este enlace le permite &quot;reclamar&quot; 
+	de seguridad (backup) de otro curso. Este enlace le permite &quot;reclamar&quot; 
 	todos los envíos de ejercicios. En el curso actual los envíos importados pueden 
 	pertenecer a cualquiera, incluso a un estudiante. Este procedimiento evita cualquier 
 	problema que esto pueda causar y le convierte en el propietario de los envíos.
