--- a/lang/es/help/exercise/moreinfo.html
+++ b/lang/es/help/exercise/moreinfo.html
@@ -1,4 +1,4 @@
-<IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/exercise/icon.gif">&nbsp;<B>Exercise</B>
+<IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/exercise/icon.gif">&nbsp;<B>Ejercicio</B>
 
 <P>Un ejercicio es una tarea a la vez simple y potente. En un ejercicio, el profesor
 pide a los estudiantes una tarea pr&aacute;ctica. Esta tarea puede ser escribir un ensayo o
