--- a/lang/es/help/exercise/nelements.html
+++ b/lang/es/help/exercise/nelements.html
@@ -1,17 +1,9 @@
-<P ALIGN=CENTER><B>N&uacute;mero de Comentarios, Elementos, Franjas, Criterios o Rúbricas</B></P>
+<P ALIGN=CENTER><B>Número de comentarios, elementos, franjas de error, criterios o rúbrica</B></P>
 
-<P>El n&uacute;mero introducido aqu&iacute; determina cuántos &iacute;tems ser&aacute;n usados en las evaluaciones. 
-	Dependiendo del tipo de estrategia de evaluaci&oacute;n, este n&uacute;mero indica el n&uacute;mero 
-	de comentarios, elementos de evaluaci&oacute;n, franjas, criterios o categor&iacute;as (conjuntos) de 
-	criterios en una rúbrica. T&iacute;picamente una tarea contiene entre 5 y 15 elementos 
-	de evaluaci&oacute;n, dependiendo el n&uacute;mero real del tama&ntilde;o y la complejidad de la tarea. 
+<P>El número introducido aquí determina cuántos elementos se usarán en las evaluaciones. Dependiendo del tipo de estrategia de calificación, este número indica el número de comentarios, elementos de evaluación, franjas de error, criterios o categorías que serán usados en las evaluaciones. Por lo general, una  tarea tendrá entre 5 y 15 elementos de evaluación; aunque el número ideal dependerá del tamaño y la complejidad de la tarea.  
 	
-<p>Durante la fase de preparaci&oacute;n del ejercicio este n&uacute;mero puede ser ajustado con seguridad. 
-	Incrementar el n&uacute;mero puede causar la visualizaci&oacute;n de elementos adicionales en blanco 
-	en el formulario de evaluaci&oacute;n. Reducir el n&uacute;mero eliminar&aacute; elementos al final del 
-	formulario de evaluaci&oacute;n.</p>
+<p>Durante la fase de configurar el ejercicio este número puede ser cambiado sin perder ninguna información.  Al aumentar el número de elementos se mostrarán nuevos elementos en blanco en el formulario de evaluación.  La reducción del número quitará los últimos elementos del formulario de evaluación.</p>
 	
-<P>Todas las evaluaciones tienen un campo de Comentarios Generales. Para una evaluaci&oacute;n &quot;sin 
-	clasificaci&oacute;n &quot; el valor concedido determina el n&uacute;mero de areas adicionales para comentarios. 
-	Se puede especificar un valor de cero para obtener un solo &aacute;rea de Comentarios Generales.	
+<P>Todas las evaluaciones tienen un campo de comentarios generales. Si usted elige "Ninguna Calificación", el valor dado aquí determinará el número de áreas para los comentarios adicionales. En el caso de poner cero, la evaluación tendrá una sola área de comentarios generales.
+	
 </P>
