--- a/lang/es/help/exercise/specimen.html
+++ b/lang/es/help/exercise/specimen.html
@@ -1,8 +1,5 @@
-<p align="center"><b>Formulario de Evaluación de Muestra</b></p>
+<p align="center"><b>Formulario de evaluación de muestra</b></p>
 
-<p>Esta p&aacute;gina muestra los detalles del formulario usado actualmente para calificar 
-	su tarea. Ser&aacute; usado por usted y por el profesor para calificar su trabajo.</p>
+<p>Esta página muestra los detalles del formulario que se usará para calificar la tarea. Será utilizada por el alumno y el profesor para calificar la tarea.</p>
 	
-<p>Note que aunque puede cambiar las calificaciones en este formulario, los cambios NO se guardan. 
-	Este es solamente un formulario de muestra, pero bastante parecido al formulario que 
-	usar&aacute;n usted y el profesor durante esta tarea.</p>
+<p>Por favor, recuerde que aunque puede cambiar las calificaciones en el formulario estos cambios NO serán almacenados.  Es simplemente una formulario de muestra, aunque de forma muy similar será utilizado por el alumno y el profesor durante esta tarea.</p>
