--- a/lang/es/help/attendance/grade.html
+++ b/lang/es/help/attendance/grade.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Calificación de registros de asistencia.</b></p>
+<p align="center"><b>Calificación de registros de asistencia</b></p>
 
 <p>Esta característica permite calificar los registros de asistencia en una escala lineal. El porcentaje del número total de horas de un curso que el estudiante está presente se añade como calificación al libro de calificaciones. Los retrasos se incluyen también en este cálculo, y se califican basándose en la configuración del "número de retrasos por ausencia" del módulo.</p>
 
