--- a/lang/es/help/forum/attachment.html
+++ b/lang/es/help/forum/attachment.html
@@ -6,10 +6,10 @@ a los foros. Este archivo es subido al servidor y guardado con su mensaje.
 documento de Word.
 <P>Este archivo puede ser de cualquier tipo. Sin embargo, es muy recomendable que 
 el archivo use los sufijos de 3 letras habituales (como .doc para un documento 
-de Word .jpg o .png para una imagen, etc). Esto hará más fácil para los demás 
+de Word .jpg o .png para una imagen, etc.). Esto hará más fácil para los demás 
 bajar y ver en sus navegadores los archivos que haya adjuntado.
 <P>Si usted reedita un mensaje y le adjunta un nuevo archivo, entonces se 
-reemplazará cualquier archivo anterior que hubiera adjuntado para ese mensaje.
+reemplazará cualquier archivo anterior que hubiera adjuntado a ese mensaje.
 <P>Si reedita un mensaje con un archivo adjunto y deja este espacio vacío, 
 entonces se mantendrá el archivo adjunto original.
 
