--- a/lang/es/help/forum/index.html
+++ b/lang/es/help/forum/index.html
@@ -8,9 +8,10 @@
 
   <li><a href="help.php?module=forum&file=forumtype.html">Tipos de foro</a>
 
-  <li><a href="help.php?module=forum&file=ratings.html">Evaluaciones</a>
+  <li><a href="help.php?module=forum&file=maxattachmentsize.html">Tamaño máximo de archivos adjuntos</a>
 
-  <li><a href="help.php?module=forum&file=subscription.html">Suscripciones</a>
+  <li><a href="help.php?module=forum&file=ratings.html">Calificaciones</a>
+
+  <li><a href="help.php?module=forum&file=subscription.html">Suscripción</a>
 
 </ul>
-
