--- a/lang/es/help/lesson/grade.html
+++ b/lang/es/help/lesson/grade.html
@@ -1,4 +1,4 @@
-<p align="center"><b>La calificación de una lección</b></p>
+<p align="center"><b>Calificación de la lección</b></p>
 
 <p>Este valor determina la máxima calificación que se puede obtener con la 
 lección.	El rango va de&nbsp; 0 a 100%. Este valor puede cambiarse en 
