--- a/lang/es/help/lesson/import.html
+++ b/lang/es/help/lesson/import.html
@@ -1,4 +1,10 @@
-<P ALIGN=CENTER><B>Importar preguntas</B></P><P>Esta función permite importar preguntas de archivos de texto, subidos mediante un formulario.<P>Los formatos permitidos son:<P><B>GIFT</B></P>
+<P ALIGN=CENTER><B>Importar preguntas</B></P>
+
+<P>Esta función permite importar preguntas de archivos de texto, subidos mediante un formulario.
+
+<P>Los formatos permitidos son:
+
+<P><B>GIFT</B></P>
 <ul>
 <p>GIFT es el formato de importación de preguntas más amigable para Moodle de todos los formatos disponible.  Su diseño permite que los profesores pueden escribir las preguntas en un archivo de texto de forma fácil. Permite preguntas de opción múltiple, Verdadero o Falso, Cortas, Emparejar y numéricas, también permite las preguntas de rellenar huecos insertandolas como  _____ . Se pueden mezclar Varios tipos de preguntas en un solo archivo del texto, y este formato también permite líneas comentarios, los nombres de la pregunta, retroalimentación y los porcentaje-peso (ponderar) calificaciones.  Veamos algunos ejemplos:</p>
 <pre>
@@ -72,12 +78,12 @@ ANSWER: A
 <p align=right><a href="help.php?file=formatctm.html&module=quiz">Más información sobre el formato "CTM"</a></p>
 </UL>
 
-<P><B>Personal</B></P>
+<P><B>Personalizado</B></P>
 <UL>
 <P>Si tiene su propio formato que desea importar, puede implementarlo editando mod/quiz/format/custom.php 
 
 
-<P>La cantidad de código nuevo necesaria es bastante pequeña. - será suficiente con analizar una sola pregunta del texto.
+<P>La cantidad de código nuevo necesaria es bastante pequeña - será suficiente con analizar una sola pregunta del texto-.
 
 <p align=right><a href="help.php?file=formatcustom.html&module=quiz">Más información sobre el formato "Custom"</a></p>
 </UL>
