--- a/lang/es/help/lesson/retake.html
+++ b/lang/es/help/lesson/retake.html
@@ -8,11 +8,10 @@
 </p>
   
 <p>Cuando a los alumnos se les permite repetir la lección, la <b>calificación</b> que aparece
-	en la página Calificaciones corresponde al <b>mejor</b> resultado de las repeticiones. 
-	Sin embargo, en el <b>Análisis de la Pregunta</b> siempre se usan las respuestas 
-	del primer intento, las respuestas posteriores son ignoradas.
+	en la página Calificaciones corresponde bien al <B>promedio</B> de calificaciones, bien al <b>mejor</b> resultado obtenido en las repeticiones. 
+	El siguiente parámetro determina cuál de esas dos alternativas de calificación se utilizará.
 </p>
-
-<p>La opción por defecto es <b>Sí</b>, los alumnos pueden retomar la lección.	Se 
-espera que sólo bajo condiciones excepcionales se selecciones la opción <b>No</b>.
+<p>Advierta que el <b>Análisis de Pregunta</b> siempre utiliza las respuesttas de los primeros intentos, y que las repeticiones subsiguientes no son tenidas en cuenta.</p>
+<p>La opción por defecto es <b>Sí</b>, lo que significa que los alumnos pueden retomar la lección.Se 
+espera que sólo bajo condiciones excepcionales se seleccione la opción <b>No</b>.
 </p>
