--- a/lang/es/help/resource/index.html
+++ b/lang/es/help/resource/index.html
@@ -2,6 +2,6 @@
 <ul>
   <li><a href="help.php?module=resource&file=resourcetype.html">Tipo de material</a>
   <li><a href="help.php?module=resource&file=summary.html">Leyendo el resumen</a>
-  <li><a href="help.php?module=resource&file=program.html">Materiales como programas</a>
+  <li><a href="help.php?module=resource&file=program.html">Recursos de programa</a>
 </ul>
 
