--- a/lang/es/help/resource/mods.html
+++ b/lang/es/help/resource/mods.html
@@ -1,5 +1,5 @@
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Materiales</B></P>
-<P>Materiales son contenidos: información que el profesor desea entregar a los 
+<P>Los materiales son contenidos: información que el profesor desea facilitar a los 
 alumnos. Pueden ser archivos preparados y cargados en el servidor; páginas 
 editadas directamente en Moodle, o páginas web externas que se hacen aparecer
 en el curso.</P>
