--- a/lang/es/help/resource/program.html
+++ b/lang/es/help/resource/program.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>Programas como materiales</B></P>
+<P ALIGN=CENTER><B>Recursos de programa</B></P>
 <p>Un Programa es un recurso externo que puede aceptar datos 
 enviados desde Moodle.</p>
 <p>Los datos se pasan vía HTTP GET (como parte de la URL) e incluyen:</p>
