--- a/lang/es/help/resource/resourcetype.html
+++ b/lang/es/help/resource/resourcetype.html
@@ -1,21 +1,22 @@
 <P ALIGN=CENTER><B>Tipos de Material</B></P>
 
-<P>Los Materiales son cualquier tipo de contenido que usted desee colocar para la lectura de los estudiantes. 
+<P>Los Materiales son cualquier tipo de contenido que usted desee colocar para ser consultado por los estudiantes. 
 Éstos son los diferentes tipos:
 
 <P><B>Texto Plano</B> - el tipo más fácil. Usted simplemente puede teclear (editar) 
-la página en un formulario en la página siguiente. Algunas de las cosas que teclee 
-serán automáticamente formateadas, de la misma forma que los mensajes en los foros. 
-Vea la ayuda sobre escribir texto: <?php  helpbutton ("text", get_string ("helptext"))?>
+la página en un formulario en la página siguiente. Lo que escriba será formateado automáticamente, de la misma forma que los mensajes en los foros. 
+Más información sobre texto con autoformato: <?php  helpbutton ("text", get_string ("helptext"))?>
 
 <P><B>Texto HTML</B> - para los usuarios más avanzados. No se efectúa ningún tipo 
 de formateo automático, sino que usted tiene que hacerlo manualmente usando los 
 códigos de HTML.
-
-<P><B>Referencia</B> - una referencia a un periódico o libro.
+<a href="help.php?file=html.html">Más información sobre texto HTML</a></p>
+<P><B>Referencia</B> - una referencia a una revista o libro.
 
 <P><B>Archivo subido</B> - muestra cualquier archivo que haya subido al curso. 
 Vea la sección de "Archivos".
+
+<p><b>Directorio</b> - muestra un directorio completo (y los subdirectorios correspondientes) en el área de archivos de curso. Los estudiantes pueden consultar y ver todos estos archivos.</p>
 
 <P><B>Enlace Web </B> - Un hiperenlace (<i>link</i>) a alguna parte de la web. 
 Cuando el alumno hace 
