--- a/lang/es/help/wiki.html
+++ b/lang/es/help/wiki.html
@@ -17,13 +17,13 @@ Para dar formato especial a un párrafo agregue alguno de los siguientes caracter
 en la primera línea del párrafo seguido de un espacio.
 </p>
 <table>
-  <tr><th>Caracter</th><th>Formato</th></tr>
+  <tr><th>Carácter</th><th>Formato</th></tr>
 
   <tr><td>ninguno</td><td>Párrafo normal</td></tr>
 
   <tr><td>&gt;</td><td>Cita</td></tr>
 
-  <tr><td>Space</td><td>Texto preformatado (monoespacio)</td></tr>
+  <tr><td>Space</td><td>Texto preformateado (monoespacio)</td></tr>
 
   <tr><td>%</td><td>Ignorar formato anterior <em>y</em> WIKI</td></tr>
 
@@ -31,13 +31,13 @@ en la primera línea del párrafo seguido de un espacio.
 
 </table>
 <h3>Formato de listas</h3>
-<p>Las listas simples se pueden construir fácilmente agregando un caracter especial 
+<p>Las listas simples se pueden construir fácilmente agregando un carácter especial 
 al comienzo de cada línea, seguido de un espacio.
 La lista se cierra con una línea en blanco. De momento no se pueden mezclar ni anidar listas.
 <br />
 Los caracteres son los siguientes:</p>
 <table>
-  <tr><th>Caracter</th><th>Resultado</th></tr>
+  <tr><th>Carácter</th><th>Resultado</th></tr>
   <tr><td>*</td><td>Lista sin orden</td></tr>
   <tr><td>#</td><td>Lista ordenada (1, 2, 3 etc.)</td></tr>
   <tr><td>:</td><td>Definición de la lista, definición</td></tr>
