--- a/lang/es/help/attendance/dynsection.html
+++ b/lang/es/help/attendance/dynsection.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Determinar la sección para asistencia basándose en esta fecha.</b></p>
+<p align="center"><b>Determinar la sección para asistencia basándose en esta fecha</b></p>
 
 <p>Mueva automáticamente esta opción a la sección correspondiente a su fecha. Si usted elige esta opción, se moverá a la semana apropiada una vez guarde los cambios.</p>
 
