--- a/lang/es/help/exercise/managing.html
+++ b/lang/es/help/exercise/managing.html
@@ -1,86 +1,87 @@
 <P ALIGN=CENTER><B>Manejo de una tarea de Ejercicio</B></P>
 
-<P>An Exercise Assignment is slightly more complex than an ordinary assignment.
-	It involves three steps or phases. These are
+<P>Una tarea de Ejercicio es ligeramente más compleja que una tarea ordinaria. Implica
+    tres pasos o fases, a saber:
+
 <OL>
-<LI><p><b>Set up Exercise </b> The assessment of the work produced in the 
-	exercise is made easier if it is broken into a number of assessment ELEMENTS. 
-	This makes the grading of an assignment less
-	arbitary and gives the students a framework on which to make assessments. 
-	The teacher has the role of setting up the assessment elements thus making a
-	grading sheet. (See that page for more details.)</p>
 	
-	<P>With the assessment elements set up the teacher must submit a 
-	Word Document or HTML file which describes the exercise or task to be done
-	by the students. This file is shown to the students in the second phase of
-	the exercise. </p>
-	
-	<p>Teachers can, if they wish, prepare a set of similar exercies, again as
-	Word Documents or HTML files, and upload those into the Exercise. Note that
-	these exercises must be quite similar as the same Assessment Form is used
-	for all of these variants. The submission of a multiple set of exercises by 
-	the teacher is optional and for certain assignments may not be appropriate.</P>
-	
-<LI><p><b>Allow Students Assessments and Submissions</b> The assignment 
-	is now opened to the students. If the teacher has set up multiple exercises then 
-	the students see different exercises, otherwise all the students see the same 
-	exercise.</p>
+<LI><p><b>Ajustar el Ejercicio </b> La evaluación del trabajo producido en el ejercicio
+    es más fácil si se divide en un número de ELEMENTOS de evaluación. Esto hace la
+	calificación de una tarea sea menos arbitraria y proporciona a los estudiantes un
+	marco de referencia sobre el cual realizar las evaluaciones. El profesor tiene el
+	papel de ajustar los elementos de la evaluación confeccionando una hoja de
+	calificaciones. (Diríjase a esa página para más detalles).</p>
 
-<p>Before the students can submit their work they must complete the assessment 
-	form. Once they have completed the assessment they are shown the upload form. 
-	The students can revise their work in the light of their self assessment. The teacher 
-	sees student's (self) assessment and an assessment form to grade the student's 
-	submission. This is a &quot;dual assessment form&quot;. At the end of this 
-	form the teacher can either ask the student to re-submit the work or not.</p>
-
-<p>If the student chooses to re-submit, the teacher can re-assess the work. The 
-	same option, re-submit or not, allows the teacher to control this cycle of 
-	re-submission and assessment. If students are allowed to put in multiple pieces
-	of work into the Exercise, the teacher should decide whether the final grades 
-	are based on the student's maximum grade or their average grade over the 
-	set of submissions. This option can be changed at any time during the Exercise
-	by updating the Exercise, it's effect is seen immediately in the Grade page.
-</p>
-
-<p>When the assignment's deadline is reached a student can submit or re-submit work.
-    The work is flagged as &quot;late&quot;. The work appears in the list of work to
-    be assessed and the teacher can, if desired, assess the work in the normal way.
-    In the various lists of peices of work the submission date is shown as red (and 
-    in the list of work to be be marked the period since submission is also shown in 
-    red). If graded, the grade of late work is shown in red and in brackets. Such 
-    grades are <b>not</b> used in the calculation of final grades and are not counted 
-    in the Grades pages. The teacher can clear the late flag by going into in the 
-    Administration page and clicking on the appropriate link. The work will then be 
-    used in the calculation of the final grade. </p>
+	<P>Ajustados los elementos de evaluación, el profesor deberá enviar un archivo
+	en Word o HTML que describa el ejercicio o tarea a realizar por los estudiantes.
+	Este archivo se muestra a los estudiantes en la segunda fase del ejercicio. </p>
 	
-<li><p><b>Show Overall Grades and League Table</b> In this final phase of 
-	the Exercise the students can see their &quot;final&quot; grades. In all 
-	phases of the Exercise (except the first phase), grades are available to
-	the students, they are, however, only &quot;partial&quot; grades as they are
-	calculated on the fly from the assessments available at the time.</p>
-	
-<p>In this final phase, students <b>cannot</b> make any further submissions. 
-    In effect the assignment is closed and the teacher has the option of showing 
-    the students examples of the best pieces of work submitted...</p>
-    
-<p>The students (and the teacher) can also be shown a &quot;League Table&quot;
-	of the student submissions. These are listed in order of grade, the top submission
-	is first. Here the grade given to the submission is teacher's
-	grade. If a student submitted more than one piece of work only their best piece 
-	of work is shown in this table. If the number of entries in the table is set to
-    zero then this table is not displayed.</p>
+	<p>Los profesores pueden, si lo desean, preparar un conjunto de ejercicios semejantes,
+	de nuevo en formato Word o HTML, y subirlos al Ejercicio. Advierta que estos
+	ejercicios deben ser similares, toda vez que para todas las variantes se utiliza
+	el mismo Formulario de Evaluación. El envío de múltiples conjuntos de ejercicios
+	por parte del profesor es opcional, e incluso para ciertos tipos de tarea podría
+	no ser apropiado.</P>
+
+<LI><p><b>Permitir Evaluaciones y Envíos de los estudiantes</b> La tarea se abre
+    ahora a los estudiantes. Si el profesor ha puesto varios ejercicios, los
+	estudiantes verán diferentes ejercicios; de otro modo, todos los estudiantes
+	verán el mismo ejercicio.</p>
+
+<p>Antes de que los estudiantes puedan enviar su trabajo, deberán completar el
+    formulario de evaluación. Una vez que hayan completado la evaluación, se les
+	mostrará el formulario de subida. Los estudiantes pueden revisar su trabajo a
+	la luz de su propia evaluación. El profesor ve las autoevaluaciones de los
+	estudiantes y un formulario para calificar los envíos. Se trata de un
+	&quot;formulario de evaluación dual&quot;. Al final de este formulario
+	el profesor puede pedir al estudiante que repita el envío de su trabajo.</p>
+
+<p>Si el estudiante elige volver a enviarlo, el profesor puede evaluarlo de nuevo.
+    La misma opción (i.e., reenviar o no) permite al profesor controlar este ciclo
+	de reenvío y evaluación. Si se permite a los estudiantes colocar varios trabajos
+	en el Ejercicio, el profesor debería decidir si las calificaciones finales se
+	basan en la calificación máxima obtenida por el estudiante o en el promedio de
+	todos los envíos. Esta opción puede modificarse en cualquier momento actualizando
+	el Ejercicio, y el efecto se ve inmediatamente en la página de Calificaciones.</p>
+
+<p>Cuando se alcanza la fecha límite el estudiante puede enviar o reenviar su trabajo,
+    pero el trabajo se señalará como &quot;retrasado&quot;. El trabajo aparece en la
+	lista de trabajos para evaluar y el profesor puede, si así lo desea, evaluarlo de
+	modo normal. En las distintas listas de trabajos se muestra la fecha en rojo, así
+	como la lista de envíos tras la fecha tope. Si ya está calificado, esta calificación
+	de trabajos fuera de plazo se muestra en color rojo entre corchetes. Estas calificaciones
+	<B>no</B> se usan en el cálculo de las calificaciones finales y no se contabilizan en las
+	páginas de Calificaciones. El profesor puede modificar la fecha tope yendo a la página
+	de Administración y haciendo clic en el enlace apropiado. El trabajo se utilizará
+	entonces en el cálculo de la calificación final.</p>
+
+<li><p><b>Mostrar calificaciones globales y Tabla de calificaciones</b> En esta fase
+    final del Ejercicio los estudiantes pueden ver sus calificaciones &quot;finales&quot;.
+	En todas las fases del Ejercicio (excepto en la primera), las calificaciones que
+	los estudiantes pueden ver son sólo &quot;parciales&quot;, tal como son calculadas
+	sobre la marcha a partir de las evaluaciones disponibles en cada momento.</p>
+
+<p>En esta fase final, los estudiantes <b>no pueden</b> hacer más envíos.
+    En efecto, la tarea está cerrada y el profesor tiene la opción de mostrar a
+	los estudiantes ejemplos de los mejores trabajoe enviados...</p>
+
+<p>Los estudiantes (y el profesor) pueden ver también una &quot;Tabla de Calificaciones&quot;
+    de los envíos. Estas notas se listan por orden (las calificaciones aquí son las otorgadas
+	por el profesor). Si un estudiante hubiera enviado más de un trabajo, en esta tabla sólo aparecerá
+	la mejor calificación. La tabla no aparecerá en el caso de que el número de entradas
+	haya sido ajustado a cero.</p>
 </ol>
 
-<p>The student's grade is a weighted combination of the teacher's grading of their
-	(initial) assessment and the teacher's grading of their work. The two weighting 
-	factors are initally set to unity. They can changed (on the Administration page)
-	at any time during the exercise and the grades shown both the students and the
-	teacher always reflect the current weighting factors.</p>
-	
-<p>At any phase of the assignment the teacher can open the &quot;Administration&quot;
-	page. This shows the current values of the two weighting factors and allows the teacher
-	to change them. It lists the students' assessments (of  their own work) and the 
-	submissions of the students. The teacher can use this page to assess and re-assess 
-	submissions, grade and re-grade assessments, delete submissions and assessments, 
-	and generally watch the progress of the assignment.</p>
+<p>La calificación del estudiante es una combinación ponderada de la calificación que
+    el profesor ha otorgado a la evaluación (inicial) y de la calificación otorgada al
+	trabajo. Ambos factores inicialmente equivalen a 1. Pueden cambiarse (en la página
+	de Administración) en cualquier momento durante el ejercicio, y las calificaciones
+	que se muestran tanto a los estudiantes como al profesor reflejan los factores de
+	ponderación vigentes en cada momento.</p>
 
+<p>En cualquier fase de la tarea el profesor puede abrir la página de &quot;Administration&quot;.
+    Esta página muestra los valores actuales de los dos factores de ponderación y permite
+	al profesor cambiarlos. Ofrece una lista de las evaluaciones que los estudiantes han
+	hecho de su propio trabajo, así como los envíos que han efectuado. El profesor puede usar
+	esta página para evaluar y reevaluar los envíos, calificar y recalificar las evaluaciones,
+	eliminar envíos y evaluaciones y tener una visión panorámica del progreso de la tarea.</p>
