--- a/lang/es/help/forum/allowdiscussions.html
+++ b/lang/es/help/forum/allowdiscussions.html
@@ -6,7 +6,7 @@ contenidos en este foro.
 y escoger la primera opción para permitirles empezar nuevos temas de debate y 
 también para contestar a esos temas.
 <P>A veces, sin embargo, usted querrá desactivar esta opción. Por ejemplo, esto 
-es útil para el foro de Noticias cuando se desae que sólo los profesores 
+es útil para el foro de Noticias cuando se desea que sólo los profesores 
 puedan anunciar nuevos asuntos para que aparezcan en la página principal del curso. 
 En este caso debería escoger la tercera opción "Ningún debate, ninguna respuesta".
 <P>Otras veces querrá permitir sólo a los profesores empezar los nuevos debates, 
