--- a/lang/es/help/forum/forumtype.html
+++ b/lang/es/help/forum/forumtype.html
@@ -1,6 +1,6 @@
 <P ALIGN=CENTER><B>Tipos de Foros</B></P>
 
-<P>Hay varios tipos diferentes de foros, entre los cuales:
+<P>Hay varios tipos diferentes de foros entre los que elegir:
 
 <P><B>Un debate sencillo.</B> Es simplemente un intercambio de ideas sobre un 
 solo tema, todo en un página. Útil para debates cortos y muy concretos.
@@ -12,3 +12,4 @@ de debate (y todos pueden responder). Esta modalidad es útil cuando usted quiere
 que cada estudiante empiece una discusión sobre, digamos, sus reflexiones sobre 
 el tema de la semana, y que todos los demás le respondan.
 
+<P>(Habrá más modalidades en futuras versiones de Moodle)
