--- a/lang/es/help/forum/mods.html
+++ b/lang/es/help/forum/mods.html
@@ -1,10 +1,9 @@
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Foros</B></P>
 <UL>
-<P>Esta actividad tal vez sea la más importante --es aquí donde se dan la mayor parte de
-los debates. Los foros pueden estructurarse de diferentes maneras, y pueden incluir 
-evaluación de cada mensaje por los compañeros.<br />
+<P>Esta actividad tal vez sea la más importante -es aquí donde se dan la mayor parte de
+los debates-. Los foros pueden estructurarse de diferentes maneras, y pueden incluir la evaluación de cada mensaje por los compañeros.<br />
 Los mensajes también se pueden ver de varias maneras, incluir mensajes adjuntos 
-e imágnees incrustadas.<br />
+e imágenes incrustadas.<br />
 Al suscribirse a un foro los participantes recibirán copias de cada mensaje en su 
 buzón de correo electrónico. El profesor puede imponer la suscripción a todos los
 integrantes del curso si así lo desea.
