--- a/lang/es/help/forum/ratings.html
+++ b/lang/es/help/forum/ratings.html
@@ -24,22 +24,48 @@ b) proporcionar retroalimentación a cada autor acerca de cómo ellos están siendo
 Los resultados no se usan de forma alguna en la evaluación del estudiante, sino que ayudan a mejorar la comunicación y el aprendizaje.
 
 <hr>
-
+</p>
 En el caso de que usted esté interesado, aquí tiene algunas referencias 
-a escritos de los autores que originalmente desarrollaron estas ideas: </p>
+a escritos de los autores que originalmente desarrollaron estas ideas:
 
-  <li>Belenky, M.F., Clinchy, B.M., Goldberger, N.R., &amp; Tarule, J.M. (1986).  Women's ways of knowing: the development of self, voice, and mind. New York, NY: Basic Books.</li>
+<ul>
 
-  <li>Clinchy, B.M. (1989a). The development of thoughtfulness in college women: Integrating reason and care. American Behavioural Scientist, 32(6), 647-657.</li>
+  <li>Belenky, M.F., Clinchy, B.M., Goldberger, N.R., &amp; Tarule, J.M. (1986). 
 
-  <li>Clinchy, B.M. (1989b). On critical thinking &amp; connected knowing. Liberal education, 75(5), 14-19.</li>
+    <I>Women's ways of knowing: the development of self, voice, and mind</I>. New York, 
 
-  <li>Clinchy, B.M. (1996). Connected and separate knowing; Toward a marriage of two minds. In N.R. Goldberger, Tarule, J.M., Clinchy, B.M. &amp;</li>
+    NY: Basic Books.</li>
 
-  <li>Belenky, M.F. (Eds.), Knowledge, Difference, and Power; Essays inspired by &#8220;Women&#8217;s Ways of Knowing&#8221; (pp. 205-247). New York, NY: Basic Books.</li>
+  <li>Clinchy, B.M. (1989a). The development of thoughtfulness in college women: 
 
-  <li>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., &amp; Mansfield, A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards Thinking and Learning Survey (ATTLS). Sex Roles, 40(9/10), 745-766.</li>
+    Integrating reason and care. <I>American Behavioural Scientist, 32</I>(6), 647-657.</li>
 
-  <li>Galotti, K. M., Reimer, R. L., &amp; Drebus, D. W. (2001). Ways of knowing as learning styles: Learning MAGIC with a partner. Sex Roles, 44(7/8), 419-436. </li>
+  <li>Clinchy, B.M. (1989b). On critical thinking &amp; connected knowing. <I>Liberal 
+
+    education, 75</I>(5), 14-19.</li>
+
+  <li>Clinchy, B.M. (1996). Connected and separate knowing; Toward a marriage 
+
+    of two minds. In N.R. Goldberger, Tarule, J.M., Clinchy, B.M. &amp;</li>
+
+  <li>Belenky, M.F. (Eds.), <I>Knowledge, Difference, and Power; Essays inspired 
+
+    by &#8220;Women&#8217;s Ways of Knowing&#8221</I>; (pp. 205-247). New York, NY: 
+
+    Basic Books.</li>
+
+  <li>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., &amp; Mansfield, 
+
+    A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards 
+
+    Thinking and Learning Survey (ATTLS). <I>Sex Roles, 40</I>(9/10), 745-766.</li>
+
+  <li>Galotti, K. M., Reimer, R. L., &amp; Drebus, D. W. (2001). Ways of knowing 
+
+    as learning styles: Learning MAGIC with a partner. <I>Sex Roles, 44</I>(7/8), 419-436. 
+
+    <br>
+
+  </li>
 
 </ul>
