--- a/lang/es/help/forum/rssarticles.html
+++ b/lang/es/help/forum/rssarticles.html
@@ -2,5 +2,5 @@
 
 <P>Esta opción le permite seleccionar el número de artículos a incluir en el Canal RSS.
 
-<P>Un número comprendido entre 5 y 20 debería ser apropiado para la mayoría de los foros. Auméntelo si se trata de un foro muy usado.
+<P>Un número comprendido entre 5 y 20 debería ser apropiado para la mayoría de los foros. Auméntelo si se trata de un foro muy utilizado.
 
