--- a/lang/es/help/lesson/maxanswers.html
+++ b/lang/es/help/lesson/maxanswers.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Máximo número de respuesta de una lección</b></p>
+<p align="center"><b>Número máximo de respuesta de una lección</b></p>
 
 <p>Este valor determina máximo número de respuestas que usará el profesor. El 
 valor por defecto es 4. Si una lección solo utilizará preguntas de VERDADERO o 
@@ -10,4 +10,4 @@ usarán en la lección.</p>
 <p>Puede editar, de forma segura, este valor en las lecciones ya creadas. De hecho, 
 será necesario si desea añadir un pregunta con muchas opciones o ampliar el 
 número de capítulos. Después de que haya añadido las preguntas o capítulos 
-también puede reducir el valor.</p>
+también puede reducir el valor a uno más &quot;estándar&quot;.</p>
