--- a/lang/es/help/lesson/maxattempts.html
+++ b/lang/es/help/lesson/maxattempts.html
@@ -1,11 +1,11 @@
-<p align="center"><b>El número máximo de intentos (por estudiante)</b></p>
+<p align="center"><b>Número máximo de intentos (por estudiante)</b></p>
 
 <p>Este valor determina el número máximo de intentos que tienen los estudiantes para responder <b>cualquiera</b> de las preguntas de una lección. En los casos de preguntas que no tienes respuestas, por ejemplo preguntas cortas o numéricas, este valor indica el número de veces que puede responder antes de que lo envíe a la siguiente página de la lección. </p>
 
 <p>El valor por defecto es 5. Valores bajos pueden desalentar al estudiante antes de resolver la pregunta. Valores altos pueden producir fustración.</p>
 
-<p>Si asignamos el valor 1 da al estudiante una única opción para responder cada pregunta. Este produce un comportamiento similar a los cuestionarios excepto que cada pregunta se presenta en una página individual.</p>
+<p>Si asignamos el valor 1 damos al estudiante una única opción para responder cada pregunta. Esto produce un comportamiento similar a los cuestionarios excepto que cada pregunta se presenta en una página individual.</p>
 
-<p>Advierta que este valor es una parámetro global y que se aplica a todas las preguntas de la lección sin tener en cuenta su tipo de pregunta.</p>
+<p>Advierta que este valor es un parámetro global y que se aplica a todas las preguntas de la lección sin tener en cuenta su tipo de pregunta.</p>
     
-<p>Recuerde que este parámetro <b>no</b> se aplica cuando los profesores comprueban las preguntas o cuando navegan por la lección. No son registrados en la base de datos el número de intentos realizados ni los calificaciones obtenidos por los profesores. ¡Los profesores pueden conocer todas las respuestas!</p>
+<p>Recuerde que este parámetro <b>no</b> se aplica cuando los profesores comprueban las preguntas o cuando navegan por la lección. No son registrados en la base de datos el número de intentos realizados ni las calificaciones obtenidas por los profesores. ¡Los profesores deberían después de todo conocer todas las respuestas!</p>
