--- a/lang/es/help/lesson/maxpages.html
+++ b/lang/es/help/lesson/maxpages.html
@@ -1,6 +1,6 @@
 <p align="center"><b>Número de Páginas (Tarjetas) a mostrar</b></p>
 
-<p>Este valor se usa solamente en las lecciones de tipo Tarjeta (Flash Card). Su 
+<p>Este valor se usa solamente en las lecciones de tipo Tarjeta (<I>Flash Card</I>). Su 
 valor por defecto es cero y significa que todas las Páginas/Tarjeta serán 
 mostradas en la lección. Cuando el valor es distinto de cero se mostrarán ese 
 número de páginas. Después de mostrar ese número de&nbsp; Páginas/Tarjeta viene 
