--- a/lang/es/help/lesson/nextpageaction.html
+++ b/lang/es/help/lesson/nextpageaction.html
@@ -1,17 +1,21 @@
-<p align="center"><b>Acción posterior a la respuesta correcta</b></p>
+<p align="center"><b>Acción después de una Respuesta Correcta</b></p>
 
-<p>Normalmente la acción es saltar a la página especificada en la respuesta. Probablemente en la mayoría de los casos se mostrará la página siguiente de la lección.  El estudiante recorre la lección en el orden lógico, comenzando en el inicio y terminando en el final.</p>
+<p>La acción normal es seguir el salto de página tal como se ha especificado en la respuesta.
+    En la mayoría de los casos se mostrará la página siguiente de la lección. Se conduce al
+	estudiante a través de la lección siguiendo un camino lógico desde el principio hasta el final.</p>
     
-<p>Sin embargo, el módulo de lección también permite utilizarse como un tipo de tarea de <i>tarjetas</i>.  De forma aleatoria se muestra el estudiante una información inicial (opcional) y una pregunta.  No existe un principio ni final de la lección.  Simplemente se muestra el conjunto de las <i>tarjetas</i> una detrás de otra sin ningún orden particular.<p>
+<p>Sin embargo, el módulo Lección puede también usarse como si fuera una tarea a base de <i>tarjetas</i> (<I>flash-cards</I>).
+    Se muestra (opcionalmente) al estudiante alguna información y se le formula una pregunta
+	habitualmente de forma aleatoria. No hay ni principio ni final establecidos, sino simplemente
+	un conjunto de <i>fichas</i> que se muestran unas junto a otras sin ajustarse a un orden
+	particular.</p>
     
-<p>Esta opción permite dos variantes muy similares del comportamiento de la tarjetas. 
-  La opción de "Mostrar una página no vista" nunca muestra la misma página dos 
-  veces (incluso si el estudiante <b>no</b> dio la respuesta correcta a la pregunta 
-  de esa Tarjeta). La otra opción "Mostrar una página no respondida" permite al 
-  estudiante ver otra vez aquellas páginas que no respondi&oacute; correctamente.</p>
+<p>Esta opción permite dos variantes muy similares al comportamiento de las tarjetas. La opción
+    "Ir a una página no vista" nunca muestra dos veces la misma página (incluso aunque el estudiante
+	<b>no</b> haya contestado correctamente la pregunta asociada con la página o la tarjeta. La otra
+	opción ("Mostrar unan página no contestada") permite al estudiante ver páginas que pueden haber
+	aparecido antes, pero sólo si ha contestado erróneamente a la pregunta asociada.</p>
 
-<p>En cualquiera de estas lecciones de tipo Tarjeta el profesor pueden optar por 
-  utilizar todas la Tarjeta en la lección o solo una parte (elegida al azar). 
-  Esto se hace con el parámetro "Número de páginas (tarjetas) a mostrar".</p>
-
-
+<p>En las lecciones a base de tarjetas el profesor puede decidir si utiliza bien todas las páginas/tarjeta
+    de la lección o sólo un subconjunto aleatorio. Esto se lleva a cabo a través del parámetro &quot; Número
+	de Páginas (Tarjetas) a mostrar&quot;.</p>
