Fixed some short tags ... see bug 1376

--- a/lang/ja/help/dialogue/info.html
+++ b/lang/ja/help/dialogue/info.html
@@ -1,4 +1,4 @@
-<img valign=absmiddle src="<?=$cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>ダイアログ</b></p>
+<img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>ダイアログ</b></p>
 
 <p>このモジュールはユーザ間の簡単なコミュニケーション方式を提供します。
 教師は学生とダイアログを開くことが出来、学生は教師とダイアログを開くことが出来ます。
