--- a/lang/pl/help/dialogue/info.html
+++ b/lang/pl/help/dialogue/info.html
@@ -1,4 +1,4 @@
-<img valign=absmiddle src="<?=$cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Dialogi</b></p>
+<img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Dialogi</b></p>
 
 <p>Ten modu³ umo¿liwia prosty sposób komunikowania siê pomiêdzy dwoma u¿ytkownikami.
  Nauczyciel mo¿e rozpocz±æ dialog tylko z jednym studentem, student tylko z jednym nauczycielem i wreszcie jeden student mo¿e
