--- a/lang/pl/help/forum/mods.html
+++ b/lang/pl/help/forum/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Fora</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Fora</B></P>
 <UL>
 <P>Ten modu³ mo¿e byæ najwa¿niejszy - w³a¶nie w nim odbywa siê wiêkszo¶æ dyskusji. 
    Fora mog± posiadaæ ró¿n± strukturê i mog± umo¿liwiaæ ocenê ka¿dego postu przez wspó³uczestników.
