--- a/lang/pl/help/quiz/mods.html
+++ b/lang/pl/help/quiz/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Quizy</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Quizy</B></P>
 <UL>
 <P>Modu³ ten umo¿liwia prowadz±cemu tworzenie i zadawanie testów w formie
    quizów sk³adaj±cych siê z pytañ wielokrotnego wyboru, pytañ typu prawda/fa³sz,
