--- a/lang/pl/help/workshop/mods.html
+++ b/lang/pl/help/workshop/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/workshop/icon.gif">&nbsp;<B>Warsztaty</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/workshop/icon.gif">&nbsp;<B>Warsztaty</B></P>
 <UL>
 <P>Warsztaty s± zajêciami wspólnej oceny z ogromn± ilo¶ci± opcji.
    Pozwalaj± uczstnikom na ocenianie swoich prac nawzajem, tak samo jak
