--- a/lang/es/help/dialogue/info.html
+++ b/lang/es/help/dialogue/info.html
@@ -1,4 +1,4 @@
-<img valign=absmiddle src="<?=$cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Charlas</b>
+<img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Charlas</b>
 <p>Este módulo brinda un método de comunicación simple entre pares de
 usuarios. Un profesor puede abrir una charla con un estudiante, un estudiante
 puede abrir una charla con el profesor, y (de manera opcional) un estudiante
