Updated versions modifying resource and dialogue

--- a/lang/es/help/dialogue/closedialogue.html
+++ b/lang/es/help/dialogue/closedialogue.html
@@ -1,11 +1,11 @@
-<p align="center"><b>Cerrar charlas</b></p>
-<p>Puede cerrar una charla en cualquier momento. Cerrar una charla la detiene y la elimina de su lista actual de charlas. Esto quiere decir que las
-charlas ya cerradas no aparecerán en esta página. </p>
+<p align="center"><b>Cerrar diálogos</b></p>
+<p>Puede cerrar un diálogo en cualquier momento. Cerrar un diálogo lo detiene y lo elimina de su lista actual de diálogos. Esto quiere decir que los
+diálogos ya cerrados no aparecerán en esta página. </p>
 
-<p>Podrá ver las charlas ya cerradas pero no podrá realizar aportes en ellas.
-Las charlas ya cerradas son eventualmente eliminadas y a partir de ese momento,
-obviamente no podrán ser consultadas.</p>
-	
-<p>Si cierra esta charla, deberá comenzar una nueva si desea seguir
+<p>Podrá ver los diálogos ya cerrados pero no podrá realizar nuevas aportaciones en ellos.
+Los diálogos ya cerrados son eventualmente eliminados y a partir de ese momento,
+obviamente no podrán ser consultados.</p>
+
+<p>Si cierra este diálogo, deberá comenzar un nuevo si desea seguir
 &quot;conversando&quot; con esta persona. Dicha persona reaparecerá en la lista
-de aquellos con quienes puede iniciar una charla.</p>
+de aquéllos con quienes puede iniciar un diálogo.</p>
