--- a/lang/es/help/dialogue/sendmail.html
+++ b/lang/es/help/dialogue/sendmail.html
@@ -1,8 +1,8 @@
 <p align="center"><b>Enviar correos electrónicos</b></p>
 
 <p>Si la casilla está marcada, entonces se enviará un correo electrónico a
-la otra persona informándole que usted ha participado en una charla con ella, o
-ha iniciado una charla con ella. El mensaje <b>no</b> contiene el texto escrito
+la otra persona informándole que usted ha participado en un diálogo charla con ella, o
+ha iniciado un diálogo con ella. El mensaje <b>no</b> contiene el texto escrito
 por usted, sino sólo un aviso y, cuando sea pertinente, un enlace para
 que pueda accederse al diálogo mismo.</p>
 
