--- a/lang/es/help/dialogue/writing.html
+++ b/lang/es/help/dialogue/writing.html
@@ -7,7 +7,7 @@ escribir directamente a su audiencia.</P>
 malentedidos. Una cosa que puede hacer es evitar las expresiones largas cuando
 puede expresar lo mismo con expresiones más cortas.</P>
 
-<P>En una charla ayuda que sus aportes sean cortos y concisos. Siempre puede
+<P>En un diálogo ayuda que lo que exprese sea corto y conciso. Siempre puede
 cerrar un diálogo y abrir otro si desea discutir acerca de otro tema.</P>
 
 <P>Cuando responda a otros, piense acerca de preguntas interesantes que pueda
