--- a/lang/es/help/dialogue/addsubject.html
+++ b/lang/es/help/dialogue/addsubject.html
@@ -1,6 +1,6 @@
 <p align="center"><b>Agregar temas</b></p>
 
-<p>Use este enlace para asignar un tema a la charla. Es una buena idea 
-tener siempre un tema para la charla, ya que de esa manera se mantiene en curso
+<p>Use este enlace para asignar un tema al diálogo. Es una buena idea
+tener siempre un tema para el diálogo, ya que de esa manera se mantiene en curso
 y se focaliza en el asunto en discusión. Si desea comenzar a hablar acerca de otro
-tema es mejor cerrar la charla actual y abrir otra sobre el nuevo asunto.</p>
+tema es mejor cerrar el diálogo actual y abrir otro sobre el nuevo asunto.</p>
