--- a/lang/es/help/dialogue/deleteafter.html
+++ b/lang/es/help/dialogue/deleteafter.html
@@ -1,6 +1,6 @@
-<p align="center"><b>Eliminación de charlas</b></p>
+<p align="center"><b>Eliminación de diálogos</b></p>
 <p>Esta opción determina el intervalo de tiempo en días para el borrado o
-eliminación de charlas. Sólo se aplica a charlas YA CERRADAS.&nbsp; </p>
-	
-<p>Si el período de tiempo se establece en cero, las charlas nunca se
+eliminación de diálogos. Sólo se aplica a diálogos YA CERRADOS.&nbsp; </p>
+
+<p>Si el período de tiempo se establece en cero, los diálogos nunca se
 borrarán. </p>
