--- a/lang/es/help/dialogue/dialoguetype.html
+++ b/lang/es/help/dialogue/dialoguetype.html
@@ -1,17 +1,17 @@
-<p align="center"><b>Tipos de charlas</b></p>
+<p align="center"><b>Tipos de diálogos</b></p>
 <p>Existen tres tipos de charlas</p>
 
-<ol><li><p><b>Profesor-Estudiante.</b> Permite charlas entre profesores y
-    estudiantes. Las charlas pueden ser iniciadas tanto por profesores como por
+<ol><li><p><b>Profesor-Estudiante.</b> Permite diálogos entre profesores y
+    estudiantes. Los diálogos pueden ser iniciados tanto por profesores como por
     estudiantes. En la lista de personas, los profesores sólo ven a estudiantes
     y los estudiantes sólo ven profesores.</p></li>
-    
-<li><p><b>Estudiante-Estudiante.</b> Permite charlas entre estudiantes. Los
-  profesores <b>no</b> son incluidos en absoluto en este tipo de charlas.</p></li>
-    
-<li><p><b>Todos.</b> Permite que cualquier persona del grupo inicie una charla
-  con cualquier otra persona del mismo grupo. Los profesores pueden iniciar 
-	charlas con otros
-  profesores y estudiantes, los estudiantes pueden iniciar charlas con otros
+
+<li><p><b>Estudiante-Estudiante.</b> Permite diálogos entre estudiantes. Los
+  profesores <b>no</b> son incluidos en absoluto en este tipo de diálogos.</p></li>
+
+<li><p><b>Todos.</b> Permite que cualquier persona del grupo inicie un diálogo
+  con cualquier otra persona del mismo grupo. Los profesores pueden iniciar
+	diálogos con otros
+  profesores y estudiantes, los estudiantes pueden iniciar diálogos con otros
   estudiantes y con profesores. </p></li>
 </ol>
