--- a/lang/es/help/dialogue/info.html
+++ b/lang/es/help/dialogue/info.html
@@ -1,21 +1,20 @@
-<img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Charlas</b>
+<img valign=absmiddle src="<?php echo $cfg->wwwroot?>/mod/dialogue/icon.gif">&nbsp;<b>Diálogos</b>
 <p>Este módulo brinda un método de comunicación simple entre pares de
-usuarios. Un profesor puede abrir una charla con un estudiante, un estudiante
-puede abrir una charla con el profesor, y (de manera opcional) un estudiante
-puede iniciar una charla con otro estudiante. Un profesor o un estudiante pueden
-involucrarse en muchas charlas en cualquier momento.</p>
-<p>Una charla puede tener un número ilimitado de entradas. Normalmente la
+usuarios. Un profesor puede abrir un diálogo con un estudiante, un estudiante
+puede abrir un diálogo con el profesor, y (de manera opcional) un estudiante
+puede iniciar un diálogo con otro estudiante. Un profesor o un estudiante pueden
+involucrarse en muchos diálogos en cualquier momento.</p>
+<p>Un diálogo puede tener un número ilimitado de entradas. Normalmente la
 &quot;conversación&quot; tiene lugar como un conjunto de respuestas
-intercaladas. Este formato no es forzoso y cualquier parte puede realizar
-aportes a la charla en cualquier momento.</p>
+intercaladas. Este formato no es obligatorio y cualquier parte puede realizar
+aportaciones al diálogo en cualquier momento.</p>
 
-<p>Una charla puede ser cerrada por cualquiera de sus participantes en cualquier 
-momento. Las
-charlas que han sido cerradas no pueden ser reabiertas. Sin embargo, una charla
-que ya ha sido cerrada puede ser vista por cualquiera de elos si aún
+<p>Un diálogo puede ser cerrado por cualquiera de sus participantes en cualquier
+momento. Los diálogos que han sido cerrados no pueden ser reabiertos. Sin embargo, un diálogo
+que ya ha sido cerrado puede ser visto por cualquiera de ellos si aún
 está disponible... </p>
-	
-<p>...El módulo borra las charlas que han sido cerradas y todas sus entradas
+
+<p>...El módulo borra los diálogos que han sido cerrados y todas sus entradas
 después de cierto período de tiempo. La duración de este período es
-establecida cuando sea crea la charla.</p>
+establecida cuando sea crea el diálogo.</p>
 
