--- a/lang/es/help/dialogue/multiple.html
+++ b/lang/es/help/dialogue/multiple.html
@@ -1,8 +1,8 @@
-<p align="center"><b>Charlas múltiples</b></p>
+<p align="center"><b>Múltiples Diálogos</b></p>
 
-<p>Esta opción permite iniciar más de una charla con otra persona. La opción
-por defecto es NO, lo que permite sólo una charla (abierta) entre dos personas.</p>
+<p>Esta opción permite iniciar más de un diálogo con otra persona. La opción
+por defecto es NO, lo que permite sólo un diálogo (abierto) entre dos personas.</p>
 
-<p>Permitir las charlas múltiples puede provocar un abuso de esta posibilidad.
+<p>Permitir los diálogos múltiples puede provocar un abuso de esta posibilidad.
 Algunas personas podrían verse &quot;importunadas&quot; por otras que abren
-muchas charlas que ellas no desean.</p>
+muchos diálogos que ellas no desean.</p>
