--- a/lang/es/help/resource/index.html
+++ b/lang/es/help/resource/index.html
@@ -1,6 +1,6 @@
-<p>Módulo de materiales</p>
+<p>Módulo de Recursos</p>
 <ul>
-  <li><a href="help.php?module=resource&file=resourcetype.html">Tipo de material</a>
+  <li><a href="help.php?module=resource&file=resourcetype.html">Tipo de recurso</a>
   <li><a href="help.php?module=resource&file=summary.html">Leyendo el resumen</a>
   <li><a href="help.php?module=resource&file=program.html">Recursos de programa</a>
 </ul>
