Updated for release 1.3

--- a/lang/cs/help/forum/subscription.html
+++ b/lang/cs/help/forum/subscription.html
@@ -1,21 +1,14 @@
-<P ALIGN=CENTER><B>Odebírat nové pøíspìvky emailem</B></P>
+<P ALIGN=CENTER><B>Odebírání nových pøíspìvkù e-mailem</B></P>
 
-<P>Kdy¾ se nìkdo pøihlásí k odebírání pøíspìvkù do fóra
-emailem, znamená to, ¾e mu bude zaslána emailem kopie ka¾dého
-pøíspìvku do tohoto fóra (pøíspìvky jsou zasílány asi ka¾dých
- <?PHP echo $CFG->maxeditingtime/60 ?> minut poté, co byl pøíspìvek
-prvnì napsán).
-</P>
+<P>Jestli¾e je nìkdo pøihlá¹en k odebírání pøíspìvkù z urèitého fóra, bude mu 
+e-mailem zaslána kopie ka¾dého pøíspìvku vlo¾eného do tohoto fóra (pøíspìvek je 
+odeslán asi 15 minut poté, co byl poprvé napsán).</P>
 
-<P>Ka¾dý si obvykle mù¾e zvolit, jestli chce nebo nechce 
-odebírat pøíspìvky emailem.
-</P>
+<P>Ka¾dý si obvykle mù¾e zvolit, zda chce, nebo nechce odebírat pøíspìvky vlo¾ené 
+do daného fóra.</P>
 
-<P>Nicménì uèitel mù¾e vnutit odebírání pøíspìvkù do urèitého fóra
-a pak student daného kurzu tuto volbu nemá a dostane kopii pøíspìvku
-emailem v¾dy.
-</P>
+<P>Uèitel v¹ak mù¾e odebírání pøíspìvkù z libovolného fóra vnutit v¹em úèastníkùm 
+kurzu, tak¾e jim pak budou zasílány kopie v¹ech pøíspìvkù z tohoto fóra.</P>
 
-<P>To je obzvlá¹tì u¾iteèné ve fóru Novinky a ve fórech k zaèátku kurzu
-(døíve ne¾ se v¹ichni nauèili jak se pøihlásit k odebírání pøíspìvkù samostatnì).
-</P>
+<P>To je obzvlá¹tì u¾iteèné ve fóru Novinky a ve fórech na zaèátku kurzu (pøedtím,
+ne¾ se v¹ichni nauèí, jak se k odebírání pøíspìvkù pøihlásit).</P>
