--- a/lang/cs/help/resource/resourcetype.html
+++ b/lang/cs/help/resource/resourcetype.html
@@ -1,59 +1,58 @@
-<p align="center"><b>Typ zdroje</b></p>
+<p align="center"><b>Typ studijního materiálu</b></p>
 
 <P>
-  Zdroje mohou obsahovat jakýkoliv druh digitální informace. Typ zdroje urèuje,
-  jak bude pøíslu¹ný zdroj va¹im u¾ivatelùm zobrazován.
+  Studijní materiály mohou obsahovat jakýkoliv druh digitální informace. Typ 
+  studijního materiálu urèuje, jak bude pøíslu¹ný materiál va¹im u¾ivatelùm zobrazován.
 </p>
 
 <p> 
-  <b>Èistý text</B> - nejjednodu¹¹í typ. Na následující stránce pouze zadáte
-  (popøípadì upravíte) text a ten bude ètenáøùm zobrazen jako webová stránka.
-  Pøed zobrazením bude tento text automaticky formátován, stejnì jako pøíspìvky
+  <b>Èistý text</B> - nejjednodu¹¹í typ. Na následující stránce pouze vlo¾íte
+  (popøípadì upravíte) text a ten bude ètenáøùm zobrazen jako souèást webové stránky.
+  Pøed zobrazením bude text automaticky zformátován stejnì jako pøíspìvky
   do diskusních fór (napø. konce øádkù èi odstavce).
-  <a href="help.php?file=text.html">Více o automatickém formátování textu</a>
+  <a href="help.php?file=text.html">Více o automatickém formátování textu</a>.
 </p>
 
 <p>
-  <b>HTML text</b> - pro zku¹enìj¹í u¾ivatele. Od èistého textu se li¹í v tom,
-  ¾e se neprovádí ¾ádné automatické formátování, proto musíte vkládat i HTML
-  znaèky pro konce øádkù &lt;br&gt;.
-  <a href="help.php?file=html.html">Více o HTML textu</a>
+  <b>HTML text</b> - umo¾òuje snadnou tvorbu formátovaného textu ve vestavìném 
+  editoru. Znalost jazyka HTML není nutná. <a href="help.php?file=html.html">
+  Více o HTML textu</a>.
 </p>
 
 <p>
-  <b>Literatura</b> - normovaná citace litaratury (kniha, èlánek, monografická
-  publikace, sborník apod.).
+  <b>Literatura</b> - odkaz na literaturu (kniha, èlánek, monografie, 
+  sborník apod.).
 </p>  
 
 <p>
-  <b>Pøilo¾ený soubor</b> - zobrazí se libovolný soubor, který jste pøedtím
-  nahráli do va¹eho kurzu pomocí nabídky "Soubory..."
+  <b>Pøilo¾ený soubor</b> - odkazuje na libovolný soubor, který jste buï ji¾ 
+  vlo¾ili do svého kurzu pomocí nabídky "Soubory...", nebo jej teprve vlo¾íte v 
+  prùbìhu vytváøení odkazu.
 </p>
 
 <p>
-  <b>Odkaz</b> - URL adresa libovolného zdroje dat na Internetu. Kdy¾ nìkdo
-  klikne na tento zdroj, pak se pøesune ze stránky kurzu na tuto adresu
-  (pøesnìji øeèeno vlo¾ené URL se nahraje do rámce, ve kterém bì¾í Moodle,
-  typicky _top, popøípadì se mù¾e pro tento zdroj otevøít nové okno prohlí¾eèe).
+  <b>Odkaz</b> - adresa libovolného zdroje dat na internetu. Kdy¾ nìkdo
+  klikne na tento studijní materiál, opustí stránku kurzu a pøejde na zadanou 
+  adresu.
 </p>
 
 <p>
-  <b>Vlo¾ená webová stránka</b> - URL adresa libovolného zdroje dat na
-  Internetu. Stejnì jako pøedchozí zdroj, i tento zobrazuje danou stránku, ov¹em
-  s tím rozdílem, ¾e stránka je zobrazena <b>v rámci stránek kurzu</b>.
+  <b>Vlo¾ená webová stránka</b> - adresa libovolného zdroje dat na internetu. 
+  Stejnì jako pøedchozí i tento typ studijního materiálu zobrazuje danou stránku, 
+  ov¹em s tím rozdílem, ¾e stránka je do kurzu graficky zaèlenìna tak, jako by 
+  byla jeho souèástí.
 </p>
 
 <p>
   <b>Program</b> - externí program, který vy¾aduje poskytnutí informací o
-  stávajícím u¾ivateli a kurzu. Tímto zpùsobem lze provázat dal¹í webové
-  aplikace s Moodlem.
-  <a href="help.php?file=program.html&module=resource">Více o zdroji Program</a>
+  stávajícím u¾ivateli a kurzu. Tímto zpùsobem lze s Moodlem provázat dal¹í
+  webové aplikace.
+  <a href="help.php?file=program.html&module=resource">Více o studijním materiálu Program</a>.
 </p>
 
 <p>
-  <b>Wiki</b> - poskytje více mo¾ností formátování ne¾ Èistý text bez nutnosti
-  uèit se znaèky HTML. Prostì pí¹ete text a navíc máte k dispozici sadu
-  formátovacích znaèek pro úpravu jeho vzhledu (napøíklad *toto bude tuèné* a 
-  /toto bude psáno kurzívou/).
-  <a href="help.php?file=wiki.html">Více o Wiki</a>
+  <b>Wiki</b> - poskytuje více mo¾ností formátování ne¾ Èistý text, bez nutnosti
+  uèit se znaèky HTML. Pøi psaní textu máte k dispozici sadu formátovacích symbolù, 
+  kterými lze ovlivòovat výsledný vzhled textu (napøíklad *toto bude tuèné* a /toto bude 
+  psáno kurzívou/). <a href="help.php?file=wiki.html">Více o Wiki</a>.
 </p>
