Fixed use of '- or -' string to a language file string. Added back lost initialcontent help file.

--- a/mod/wiki/mod.html
+++ b/mod/wiki/mod.html
@@ -117,7 +117,8 @@
             }
             else {
         ?>
-        <INPUT type="text" name="pagename" size=30 value="<?php  p($form->pagename) ?>"><b> - or - </b>
+        <INPUT type="text" name="pagename" size=30 value="<?php  p($form->pagename) ?>"><b>
+        <?php print_string('pagenamechoice', 'wiki'); ?></b>
         <?php
             }
         ?>
